--- a/front-app/package.json
+++ b/front-app/package.json
@@ -2,7 +2,7 @@
     "name": "front-app",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:8080",
+    "_proxy": "http://localhost:8080",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
@@ -13,6 +13,7 @@
         "@types/react-dom": "^16.9.0",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
+        "http-proxy-middleware": "^1.0.3",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0",
         "react-dom": "^16.13.1",
