--- a/apigw/src/resources/application.properties
+++ b/apigw/src/resources/application.properties
@@ -2,3 +2,6 @@ quarkus.dynamodb.sync-client.type=apache
 
 quarkus.dynamodb.aws.region=ap-northeast-1
 quarkus.dynamodb.aws.credentials.type=default
+
+5f.table.rooms=${ROOMS_TABLENAME:rooms-local}
+5f.index.connections=${CONNECTIONS_INDEXNAME:rooms-connections-index-local}
