--- a/apigw/src/resources/application.properties
+++ b/apigw/src/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.dynamodb.aws.region=ap-northeast-1
 quarkus.dynamodb.aws.credentials.type=default
 
 5f.table.rooms=${ROOMS_TABLENAME:rooms-local}
-5f.index.connections=${CONNECTIONS_INDEXNAME:rooms-connections-index-local}
+5f.table.connections=${CONNECTIONS_TABLENAME:connections-local}
