--- a/apigw/serverless.yml
+++ b/apigw/serverless.yml
@@ -7,22 +7,13 @@ provider:
   region: ap-northeast-1
   logs:
     websocket: true
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "dynamodb:*"
+      Resource:
+        - arn:aws:dynamodb:ap-northeast-1:*:table/${self:custom.roomsTable}
+        - arn:aws:dynamodb:ap-northeast-1:*:table/${self:custom.connectionsTable}
 
 custom:
   roomsTable: ${self:service.name}-rooms-${self:provider.stage}
