--- a/apigw/pom.xml
+++ b/apigw/pom.xml
@@ -72,13 +72,7 @@
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
-      <artifactId>apache-client</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>url-connection-client</artifactId>
     </dependency>
   </dependencies>
   <build>
@@ -92,6 +86,11 @@
             <goals>
               <goal>build</goal>
             </goals>
+            <configuration>
+              <additionalBuildArgs>
+                --allow-incomplete-classpath
+              </additionalBuildArgs>
+            </configuration>
           </execution>
         </executions>
       </plugin>
