--- a/apigw/serverless.yml
+++ b/apigw/serverless.yml
@@ -5,6 +5,7 @@ provider:
   stage: dev
   runtime: java11
   region: ap-northeast-1
+  memorySize: 256
   logs:
     websocket: true
   iamRoleStatements:
