--- a/apigw/src/resources/application.properties
+++ b/apigw/src/resources/application.properties
@@ -1,5 +1,7 @@
 # quarkus.dynamodb.sync-client.type=apache
 
+quarkus.lambda.hanndler=${HANDLER_NAME:newRoom}
+
 quarkus.dynamodb.aws.region=ap-northeast-1
 quarkus.dynamodb.aws.credentials.type=default
 
