--- a/apigwt/serverless.yml
+++ b/apigwt/serverless.yml
@@ -4,11 +4,6 @@ service:
 #app: your-app-name
 #org: your-org-name
 
-custom:
-  webpack:
-    webpackConfig: ./webpack.config.js
-    includeModules: true
-
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
@@ -16,15 +11,69 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  stage: ${opt:stage, 'dev'}
+  memorySize: 256
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
+    ROOMS_TABLENAME: ${self:custom.roomsTable}
+    CONNECTIONS_TABLENAME: ${self:custom.connectionsTable}
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "dynamodb:*"
+      Resource:
+        - Fn::GetAtt: [ RoomsTable, Arn ]
+        - Fn::GetAtt: [ ConnectionsTable, Arn ]
+
+custom:
+  corsOrigin: ${opt:corsOrigin, 'http://localhost:3000'}
+  webpack:
+    webpackConfig: ./webpack.config.js
+    includeModules: true
+  roomsTable: ${self:service.name}-rooms-${self:provider.stage}
+  connectionsTable: ${self:service.name}-connections-${self:provider.stage}
 
 functions:
   hello:
-    handler: handler.hello
+    handler: ApiHandler.newRoom
     events:
       - http:
           method: get
-          path: hello
+          path: api/rooms/new
+          cors:
+            origin: ${self:custom.corsOrigin}
+
+resources:
+  Resources:
+    RoomsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.roomsTable}
+        AttributeDefinitions:
+          - AttributeName: RoomId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: RoomId
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        SSESpecification:
+          SSEEnabled: True
+    ConnectionsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.connectionsTable}
+        AttributeDefinitions:
+          - AttributeName: RoomId
+            AttributeType: S
+          - AttributeName: ConnectionId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: RoomId
+            KeyType: HASH
+          - AttributeName: ConnectionId
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+        SSESpecification:
+          SSEEnabled: True
