--- a/apigwt/serverless.yml
+++ b/apigwt/serverless.yml
@@ -19,6 +19,7 @@ provider:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
     ROOMS_TABLENAME: ${self:custom.roomsTable}
     CONNECTIONS_TABLENAME: ${self:custom.connectionsTable}
+    CORS_ORIGIN: ${self:custom.corsOrigin}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
