--- a/apigwt/serverless.yml
+++ b/apigwt/serverless.yml
@@ -11,6 +11,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  region: ap-northeast-1
   stage: ${opt:stage, 'dev'}
   memorySize: 256
   apiGateway:
