--- a/apigwt/serverless.yml
+++ b/apigwt/serverless.yml
@@ -1,8 +1,5 @@
 service:
-  name: apigwt
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
+  name: fivefingers
 
 # Add the serverless-webpack plugin
 plugins:
@@ -28,6 +25,10 @@ provider:
       Resource:
         - Fn::GetAtt: [ RoomsTable, Arn ]
         - Fn::GetAtt: [ ConnectionsTable, Arn ]
+        - Fn::Join:
+          - ''
+          - - Fn::GetAtt: [ ConnectionsTable, Arn ]
+            - '/index/roomid-index'
 
 custom:
   corsOrigin: ${opt:corsOrigin, 'http://localhost:3000'}
@@ -90,15 +91,22 @@ resources:
       Properties:
         TableName: ${self:custom.connectionsTable}
         AttributeDefinitions:
-          - AttributeName: RoomId
-            AttributeType: S
           - AttributeName: ConnectionId
+            AttributeType: S
+          - AttributeName: RoomId
             AttributeType: S
         KeySchema:
-          - AttributeName: RoomId
-            KeyType: HASH
           - AttributeName: ConnectionId
-            KeyType: RANGE
+            KeyType: HASH
+        GlobalSecondaryIndexes:
+          - IndexName: roomid-index
+            KeySchema:
+              - AttributeName: RoomId
+                KeyType: HASH
+              - AttributeName: ConnectionId
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
         SSESpecification:
           SSEEnabled: True
