--- a/front-app/.env
+++ b/front-app/.env
@@ -1,3 +1,6 @@
 REACT_APP_WS_URL=
 REACT_APP_API_URL=
 REACT_APP_VERSION=$npm_package_version
+REACT_APP_OGP_TITLE=5F: Five Fingers (Fist to Five)
+REACT_APP_OGP_IMAGE=https://kdnakt.github.io/5f/redfingers.png
+REACT_APP_OGP_DESCRIPTION=Let's check-in, gain consensus and vote!
