--- a/front-app/.env
+++ b/front-app/.env
@@ -1,5 +1,5 @@
-REACT_APP_WS_URL=
-REACT_APP_API_URL=
+REACT_APP_WS_URL=wss://dl7ptocha9.execute-api.ap-northeast-1.amazonaws.com/prod
+REACT_APP_API_URL=https://1o9mxc80u4.execute-api.ap-northeast-1.amazonaws.com/prod
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_OGP_TITLE=5F: Five Fingers (Fist to Five)
 REACT_APP_OGP_IMAGE=https://kdnakt.github.io/5f/redfingers.png
