--- a/front-app/.env.test
+++ b/front-app/.env.test
@@ -1,6 +1,6 @@
 REACT_APP_WS_URL=ws://localhost
 REACT_APP_API_URL=
-REACT_APP_VERSION=$npm_package_version
+REACT_APP_VERSION=test-version
 REACT_APP_OGP_TITLE=5F_test_mode
 REACT_APP_OGP_IMAGE=http://localhost/5f/redfingers.png
 REACT_APP_OGP_DESCRIPTION=Let's check-in, gain consensus and vote!
