--- a/apigwt/package.json
+++ b/apigwt/package.json
@@ -4,7 +4,12 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   },
   "dependencies": {
     "aws-sdk": "^2.814.0",
@@ -12,9 +17,12 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^27.4.1",
     "@types/node": "^10.12.18",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "jest": "^27.5.1",
     "serverless-webpack": "^5.2.0",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
