--- a/apigwt/package.json
+++ b/apigwt/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.10.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "jest": "^29.7.0",
+    "serverless-rust": "^0.3.8",
     "serverless-webpack": "^5.13.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
