--- a/apigwt/serverless.yml
+++ b/apigwt/serverless.yml
@@ -3,6 +3,8 @@ service: fivefingers
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  # uncomment below later
+  # - serverless-rust
 
 provider:
   name: aws
