--- a/apigwt/rust-lambda/Cargo.toml
+++ b/apigwt/rust-lambda/Cargo.toml
@@ -31,4 +31,6 @@ serde_json = "1.0.108"
 tokio = { version = "1", features = ["macros"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
+aws-sdk-dynamodb = "1.3.0"
+aws-config = "1.0.1"
 
